modal css fix on mobile devices

--- a/static-resources/almond_uilib/css/almondui.css
+++ b/static-resources/almond_uilib/css/almondui.css
@@ -1163,7 +1163,7 @@ td.noSidebarCell{
     }
 
     .almond #myContentModal .modal-dialog{
-        width:100%;
+        width:95%;
     }
 
     .almond #contentIframeWrapper{
